force-app/main/default/objects/Case/fields/AccountOwner__c.field-meta.xml
<CustomField>
    <fullName>AccountOwner__c</fullName>
    <formula>Account.OwnerName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>