force-app/main/default/objects/Case/fields/AccountShippingCity__c.field-meta.xml
<CustomField>
    <fullName>AccountShippingCity__c</fullName>
    <formula>Account.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Shipping City</label>
    <type>Text</type>
</CustomField>