force-app/main/default/objects/Case/fields/AttachedArticleCount__c.field-meta.xml
<CustomField>
    <fullName>AttachedArticleCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field to count the number of knowledge articles attached to a Case</description>
    <label>Attached Article Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>