force-app/main/default/objects/Case/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <label>Browser</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Google Chrome</fullName>
            </value>
            <value>
                <fullName>Microsoft Edge</fullName>
            </value>
            <value>
                <fullName>Microsoft Internet Explorer</fullName>
            </value>
            <value>
                <fullName>Mozilla Firefox</fullName>
            </value>
            <value>
                <fullName>Opera</fullName>
            </value>
            <value>
                <fullName>Safari</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>