force-app/main/default/objects/Case/fields/CaseOriginDetail__c.field-meta.xml
<CustomField>
    <fullName>CaseOriginDetail__c</fullName>
    <label>Case Origin Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origin</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Learning Platform</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Webform</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>