force-app/main/default/objects/Case/fields/CategoryLevel1__c.field-meta.xml
<CustomField>
    <fullName>CategoryLevel1__c</fullName>
    <label>Category Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OperatingCompany__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CategoryLevel1</valueSetName>
    </valueSet>
</CustomField>