force-app/main/default/objects/Case/fields/CategoryLevel2__c.field-meta.xml
<CustomField>
    <fullName>CategoryLevel2__c</fullName>
    <label>Category Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CategoryLevel1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CategoryLevel2</valueSetName>
    </valueSet>
</CustomField>