force-app/main/default/objects/Case/fields/CategoryLevel3__c.field-meta.xml
<CustomField>
    <fullName>CategoryLevel3__c</fullName>
    <label>Category Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CategoryLevel2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CategoryLevel3</valueSetName>
    </valueSet>
</CustomField>