force-app/main/default/objects/Case/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <description>Field created to pick up the Contacts Email address as the standard field cannot be used in List Views</description>
    <formula>Contact.Email</formula>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>