force-app/main/default/objects/Case/fields/ContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>ContactFirstName__c</fullName>
    <formula>IF(ISNULL(ContactId), &apos;&apos;, Contact.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact FirstName</label>
    <type>Text</type>
</CustomField>