force-app/main/default/objects/Case/fields/ExternalTicketNumber__c.field-meta.xml
<CustomField>
    <fullName>ExternalTicketNumber__c</fullName>
    <description>Field to save a ticket number in an external system related to solving this case</description>
    <label>External Ticket Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>