force-app/main/default/objects/Case/fields/FreshserviceTicketId__c.field-meta.xml
<CustomField>
    <fullName>FreshserviceTicketId__c</fullName>
    <label>Internal Ticket Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>