force-app/main/default/objects/Case/fields/ISSUE__c.field-meta.xml
<CustomField>
    <fullName>ISSUE__c</fullName>
    <description>This field is created for report that sends daily to VIamet. This foeld will be always empty. Should be removed when survey functionality goes to Marketing Cloud</description>
    <label>ISSUE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>