force-app/main/default/objects/Case/fields/LastStatusChange__c.field-meta.xml
<CustomField>
    <fullName>LastStatusChange__c</fullName>
    <label>Last Status Change</label>
    <type>DateTime</type>
</CustomField>