force-app/main/default/objects/Case/fields/MAAND__c.field-meta.xml
<CustomField>
    <fullName>MAAND__c</fullName>
    <description>This field is created for report that sends daily to VIamet. This field will be always empty. Should be removed when survey functionality goes to Marketing Cloud</description>
    <label>MAAND</label>
    <length>10</length>
    <type>Text</type>
</CustomField>