force-app/main/default/objects/Case/fields/QueueID__c.field-meta.xml
<CustomField>
    <fullName>QueueID__c</fullName>
    <label>QueueID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>