force-app/main/default/objects/Case/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <label>Queue Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>