force-app/main/default/objects/Case/fields/ScreenshotAdditionalTechnicalDetail__c.field-meta.xml
<CustomField>
    <fullName>ScreenshotAdditionalTechnicalDetail__c</fullName>
    <description>This field is added for adding screen shots and/or additional technical details to a case when there is a possible technical issue to be investigated</description>
    <inlineHelpText>Add a screenshot of the problem and/or additional technical details here</inlineHelpText>
    <label>Screenshot / Additional Technical Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>