force-app/main/default/objects/Case/fields/WEEK__c.field-meta.xml
<CustomField>
    <fullName>WEEK__c</fullName>
    <formula>TEXT (ISOWEEK(  ClosedDate  )) &amp;&apos;-&apos;&amp; Text(Year( DATEVALUE(ClosedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WEEK</label>
    <type>Text</type>
</CustomField>