force-app/main/default/objects/Case/recordTypes/Liber.recordType-meta.xml
<RecordType>
    <fullName>Liber</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>Liber</label>
</RecordType>