force-app/main/default/objects/Case/recordTypes/Noordhoff.recordType-meta.xml
<RecordType>
    <fullName>Noordhoff</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>Noordhoff</label>
</RecordType>