force-app/main/default/objects/Case/recordTypes/NoordhoffProfessional.recordType-meta.xml
<RecordType>
    <fullName>NoordhoffProfessional</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>Noordhoff Professional</label>
</RecordType>