force-app/main/default/objects/Case/recordTypes/NoordhoffZorg.recordType-meta.xml
<RecordType>
    <fullName>NoordhoffZorg</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>Noordhoff Zorg</label>
</RecordType>