force-app/main/default/objects/Case/recordTypes/Plantyn.recordType-meta.xml
<RecordType>
    <fullName>Plantyn</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>Plantyn</label>
</RecordType>