force-app/main/default/objects/Case/validationRules/PreventCaseStatuschangetoClosed.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventCaseStatuschangetoClosed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED( Status ),
    ISPICKVAL( Status , &quot;Closed&quot;),
    NOT( $User.ValidationRulesDoNotApply__c  = true)
  
)</errorConditionFormula>
    <errorMessage>You can only set Cases to Solved, not Closed. They will automatically be set to Closed after the customer&apos;s response period has ended.</errorMessage>
</ValidationRule>