force-app/main/default/objects/Case/validationRules/ProblemCaseCannotHaveParent.validationRule-meta.xml
<ValidationRule>
    <fullName>ProblemCaseCannotHaveParent</fullName>
    <active>true</active>
    <description>A case should not save with type &apos;Problem&apos; and a Parent Case linked, this is only allowed for types Question and Incident</description>
    <errorConditionFormula>AND(
NOT($User.ValidationRulesDoNotApply__c = true),
ISPICKVAL(Type, &apos;Problem&apos;),
NOT  (ISBLANK(ParentId )) 
)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>You cannot save a Case of Type &apos;Problem&apos; with a Parent Case linked. Switch the Case back to Type &apos;Question&apos; or &apos;Incident&apos; and remove the Parent Case or create a separate case of Type &apos;Problem&apos;</errorMessage>
</ValidationRule>