force-app/main/default/objects/Case/listViews/Knowledge_Help_Case.listView-meta.xml
<ListView>
    <fullName>Knowledge_Help_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Knowledge Help</label>
    <queue>NoordhoffKnowledgeHelp</queue>
    <sharedTo>
        <group>AllUsersNoordhoff</group>
    </sharedTo>
</ListView>