force-app/main/default/objects/Case/listViews/MyOnHoldCases.listView-meta.xml
<ListView>
    <fullName>MyOnHoldCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </filters>
    <label>My On Hold Cases</label>
</ListView>