force-app/main/default/objects/Case/listViews/NoordhoffCSF_Case.listView-meta.xml
<ListView>
    <fullName>NoordhoffCSF_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>CSF</label>
    <queue>NoordhoffCSF</queue>
    <sharedTo>
        <role>Noordhoff_Customer_Service_Manager</role>
    </sharedTo>
</ListView>