force-app/main/default/objects/Case/listViews/NoordhoffKnowledgeHelp_Case.listView-meta.xml
<ListView>
    <fullName>NoordhoffKnowledgeHelp_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Knowledge Help</label>
    <queue>NoordhoffKnowledgeHelp</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>