force-app/main/default/objects/Case/listViews/NoordhoffMBOOpenstaandeKlantvragen_Case.listView-meta.xml
<ListView>
    <fullName>NoordhoffMBOOpenstaandeKlantvragen_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>MBO - Openstaande Klantvragen</label>
    <queue>NoordhoffMBOOpenstaandeKlantvragen</queue>
    <sharedTo>
        <group>AllUsersNoordhoff</group>
    </sharedTo>
</ListView>